fixed the overflow

--- a/Styles/menu_style.css
+++ b/Styles/menu_style.css
@@ -1,3 +1,7 @@
+.container {
+    width: 100%;
+    overflow-x: auto;
+}
 
 a:link {
   color: black;
